# OpenReady

./: .env.example  .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  eslint.config.js  index.html  openready_master_plan.md  package.json  playwright.config.ts  pnpm-lock.yaml  repopulse_master_plan.md  tailwind.config.ts  tsconfig.cli.json  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: action-smoke.yml  lint-and-test.yml  release.yml
dist-cli/: openready.mjs
docs/: ai-expansion.md  architecture.md  classification.md  cli.md  design-system.md  github-action.md  json-schema.md  onboarding-and-keyboard.md  plugins.md  portfolio.md  privacy.md  product-principles.md  releasing.md  roadmap.md  scoring-model.md  signing.md  tech-stack-detection.md  updater.md  voice-and-tone.md
docs/examples/: badge-refresh.yml  gate-on-pr.yml
e2e/: app.spec.ts  helpers.ts  tsconfig.json
e2e/fixtures/: github.ts
schemas/: openready.export.v1.schema.json  openready.pack.v1.schema.json  openready.profile.v1.schema.json  schema.test.ts
scripts/: build-cli.mjs  bump-version.mjs  sign-windows.ps1
src/: App.test.tsx  App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/cli/: args.test.ts  args.ts  auth.test.ts  auth.ts  badge.test.ts  badge.ts  run.ts  (+5 more)
(+136 files in other folders)
