[package]
name = "openready"
version = "0.3.0"
description = "OpenReady — analyze GitHub repositories for portfolio readiness"
authors = ["Magnus Almås"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "openready_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-store = "2.4.0"
# Native OS credential stores per platform. Without an explicit backend feature,
# keyring v3 falls back to a non-persistent mock, so stored secrets cannot be read
# back. Each feature's dependencies are target-gated, so enabling all three is safe.
keyring = { version = "3", features = [
  "apple-native",
  "windows-native",
  "sync-secret-service",
] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
